--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "تطبيق الأذكار",
-  "short_name": "الأذكار",
+  "name": "تطبيق يَقِيَّن",
+  "short_name": "يَقِيَّن",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#0f172a",
